...
                                <color key="backgroundColor" red="0.76427215339999999" green="0.63443940880000005" blue="0.61007863279999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="DF3-gM-dfK"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="TLX-Cg-wci"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="CONTINUE">
                                    <color key="titleColor" red="0.18194511529999999" green="0.18197810649999999" blue="0.18194061519999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="verifyEmailAction:" destination="Qaj-S2-KAe" eventType="touchUpInside" id="gCg-N8-O9k"/>
                                </connections>
                            </button>
...
                                        <color key="backgroundColor" systemColor="darkTextColor"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="IkX-T8-YTz"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="dKL-yh-HWO"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <state key="normal" title="INVITE">
                                            <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="btnSendInvitation:" destination="Vif-xu-roM" eventType="touchUpInside" id="bJe-Nv-7eD"/>
                                            <action selector="register" destination="MyA-tK-DPg" eventType="touchUpInside" id="IGv-y1-ZEF"/>
                                        </connections>
...
                        <viewControllerLayoutGuide type="bottom" id="l3F-y3-niA"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="29i-TS-d5A">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Verification code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kt4-K7-dYj" customClass="MDCTextField">
                                <rect key="frame" x="16" y="139" width="382" height="68"/>
                                <color key="tintColor" systemColor="darkTextColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="68" id="X7r-tO-rKf"/>
                                    <constraint firstAttribute="height" constant="68" id="t6I-7I-s5D"/>
                                </constraints>
...
